# gimi

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
.builds/: alpine.yml
.gimi/: config.toml
src/: config.c  config.h  gimi_constants.h  gimi_constants.h.in  main.c
src/cli/: cli.c  cli.h
src/cli/command/: ci.c  ci.h  config.c  config.h  init.c  init.h  provider.c  provider.h  push.c  push.h
src/cli/command/ci/: ci.c  ci.h  github.h  sourcehut.h
